# Traverse

./: .gitignore  2ab_test_summary.md  3ab_test_summary.md  4ab_test_summary.md  5ab_test_summary.md  7ab_test_summary.md  LICENSE  README.md  ab_test_summary.md  input.md  pyproject.toml  requirements.txt
depgraph/: __init__.py  cli.py  describe.py  graph_builder.py  html_export.py  incremental.py  llm.py  mcp_server.py  retrieve.py  scanner.py  slicer.py  store.py  weights.py
depgraph/extractors/: __init__.py  c_cpp.py  go_lang.py  java_lang.py  js_ts.py  python_ast.py  rust_lang.py
examples/sample_app/: app.py  auth.py  config.py  db.py  logger.py  models.py  routes.py  utils.py  views.py
examples/sample_app/tests/: test_auth.py
tools/: ab_token_test.py
